--- a/src/main/resources/templates/admin/members.html
+++ b/src/main/resources/templates/admin/members.html
@@ -67,7 +67,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="member : ${members}">
+                <tr th:each="member : ${paging}">
                     <td th:text="${member.name}"></td>
                     <td th:text="${member.loginId}"></td>
                     <td th:text="${member.telephone}"></td>
@@ -78,6 +78,27 @@
                 </tbody>
             </table><br>
             <!-- 회원 조회 끝 -->
+
+            <!-- 페이징 처리 시작 -->
+            <div th:if="${!paging.isEmpty()}">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                        <a class="page-link" th:href="@{|?page=${paging.number-1}|}">
+                            <span>prev</span>
+                        </a>
+                    </li>
+                    <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                        th:classappend="${page == paging.number} ? 'active'" class="page-item">
+                        <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                    </li>
+                    <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                        <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                            <span>next</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 페이징 처리 끝 -->
         </div>
     </div>
     <!-- end single product -->
