--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -65,7 +65,7 @@
                     <th>주문 상세</th>
                 </tr>
                 </thead>
-                <tbody th:each="order : ${orders}">
+                <tbody th:each="order : ${paging}">
                 <tr>
                     <td th:text="${order.id}"></td>
                     <td th:text="${order.user.loginId}"></td>
@@ -85,6 +85,27 @@
                 </tbody>
             </table><br>
             <!-- 전체 주문 조회 끝 -->
+
+            <!-- 페이징 처리 시작 -->
+            <div th:if="${!paging.isEmpty()}">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
+                        <a class="page-link" th:href="@{|?page=${paging.number-1}|}">
+                            <span>prev</span>
+                        </a>
+                    </li>
+                    <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
+                        th:classappend="${page == paging.number} ? 'active'" class="page-item">
+                        <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                    </li>
+                    <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
+                        <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                            <span>next</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- 페이징 처리 끝 -->
         </div>
     </div>
 
