--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -404,50 +404,49 @@
 								</div>
 							</div>
 						</div>
-						<div class="goods-question" id="goods-question">
-							<div class="container">
-								<div class="row">
-									<div class="col-lg-8 col-md-12">
-										<!-- 문의 등록 페이지 이동 버튼 -->
-										<div class="cart-buttons" style="text-align: center; float: right;">
-											<a href="#" th:href="@{/products/{id}/questions (id=${dto.id})}" class="boxed-btn btn-lg black">+</a>
-										</div><br><br>
+                        <div class="goods-question" id="goods-question">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-8 col-md-12">
+                                        <!-- 문의 등록 페이지 이동 버튼 -->
+                                        <!--                                    <div class="cart-buttons" style="text-align: center; float: right;">-->
+                                        <!--                                        <a href="#" th:href="@{/qna}" class="boxed-btn btn-lg black">+</a>-->
+                                        <!--                                    </div><br><br>-->
 
-										<div>
-											<table class="cart-table">
-												<thead>
-												<tr>
-													<th>번호</th>
-													<th>카테고리</th>
-													<th>작성자</th>
-													<th>작성 날짜</th>
-												</tr>
-												</thead>
-												<tbody th:each="question : ${questions}">
-												<tr>
-													<!-- 비밀글인 경우 비밀번호 입력 팝업 띄우기, 관리자는 해당 없음 -->
-													<!--td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-													<td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
-													<div id='password'/-->
+                                        <div>
+                                            <table class="cart-table">
+                                                <thead>
+                                                <tr>
+                                                    <th>번호</th>
+                                                    <th>카테고리</th>
+                                                    <th>작성자</th>
+                                                    <th>작성 날짜</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody th:each="question : ${questions}">
+                                                <tr>
+                                                    <!-- 비밀글인 경우 비밀번호 입력 팝업 띄우기, 관리자는 해당 없음 -->
+                                                    <td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+                                                    <td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
 
-													<td th:text="${question.category}"></td>
-													<td th:text="${question.user.loginId}"></td>
-													<td th:text="${#temporals.format(question.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
-													<!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
-													<!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
-												</tr>
-												<!--tr th:each="answer : ${question.answers}">
-													<td th:text="|Re: ${answer.user.role}|" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-													<td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="alertPopup(${question.password})" value="prompt"></td>
-													<div id='password'/>
-												</tr-->
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+                                                    <td th:text="${question.category}"></td>
+                                                    <td th:text="${question.user.loginId}"></td>
+                                                    <td th:text="${#temporals.format(question.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                                                    <!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
+                                                    <!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
+                                                </tr>
+                                                <tr th:each="answer : ${question.answers}">
+                                                    <td th:text="|Re: ${answer.user.role}|" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
+                                                    <td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
+                                                    <div id='password'/>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -479,25 +478,25 @@
 <script src="assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="assets/js/main.js"></script>
-<script>
-	$(function(){
-		$('.tabcontent > div').hide();
-		$('.tabnav a').click(function () {
-			$('.tabcontent > div').hide().filter(this.hash).fadeIn();
-			$('.tabnav a').removeClass('active');
-			$(this).addClass('active');
-			return false;
-		}).filter(':eq(0)').click();
-	});
+<script type="text/javascript">
+    $(function(){
+        $('.tabcontent > div').hide();
+        $('.tabnav a').click(function () {
+            $('.tabcontent > div').hide().filter(this.hash).fadeIn();
+            $('.tabnav a').removeClass('active');
+            $(this).addClass('active');
+            return false;
+        }).filter(':eq(0)').click();
+    });
 
-	function alertPopup(qnaPW) {
-		let prompt = prompt('비밀번호를 입력하세요');
-		let inputPassword = Number(prompt);
+    function alertPopup(password) {
+        let prompt = prompt('비밀번호를 입력하세요');
+        let inputPassword = Number(prompt);
 
-		if (String(inputPassword) != qnaPW) {
-			alert('비밀번호가 틀렸습니다!');
-		}
-	}
+        if (String(inputPassword) != password) {
+            alert('비밀번호가 틀렸습니다!');
+        }
+    }
 </script>
 </body>
 </html>
