--- a/src/main/resources/templates/single-product.html
+++ b/src/main/resources/templates/single-product.html
@@ -426,8 +426,8 @@
                                                 <tbody th:each="question : ${questions}">
                                                 <tr>
                                                     <!-- 비밀글인 경우 비밀번호 입력 팝업 띄우기, 관리자는 해당 없음 -->
-                                                    <td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
-                                                    <td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
+                                                    <!--td th:text="${question.id}" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td-->
+                                                    <!--td th:text="${question.id}" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td-->
 
                                                     <td th:text="${question.category}"></td>
                                                     <td th:text="${question.user.loginId}"></td>
@@ -435,11 +435,11 @@
                                                     <!--								<td th:if="${question.secret == 'secret'}" th:text="비밀 글입니다."></td>-->
                                                     <!--								<td th:unless="${question.secret == 'secret'}" th:text="${question.contents}"></td>-->
                                                 </tr>
-                                                <tr th:each="answer : ${question.answers}">
+                                                <!--tr th:each="answer : ${question.answers}">
                                                     <td th:text="|Re: ${answer.user.role}|" th:if="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:onclick="|location.href='@{/questions/{id} (id=${question.id})}'|"></td>
                                                     <td th:text="|Re: ${answer.user.role}|" th:unless="${question.secret == 'open' or loginUser.role == 'ADMIN'}" th:attr="onclick=|alertPopup('*${question.password}')|" value="prompt"></td>
                                                     <div id='password'/>
-                                                </tr>
+                                                </tr-->
                                                 </tbody>
                                             </table>
                                         </div>
