--- a/src/main/resources/templates/admin/update-answer.html
+++ b/src/main/resources/templates/admin/update-answer.html
@@ -57,9 +57,9 @@
             <input type="hidden" name="_method" value="PUT"/>
             <!-- 내용 -->
             <div style="width:300px;margin:0 auto;">
-                <label for="contents">답변 내용</label>
-                <input type="text" th:value="${answer.contents}"
-                       name="contents" id="contents">
+                <label for="content">답변 내용</label>
+                <input type="text" th:value="${answer.content}"
+                       name="content" id="content">
             </div><br>
 
             <!-- 답변 수정 버튼 시작 -->
