--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -18,6 +18,7 @@
             <!-- 관리자 menu start -->
             <nav class="main-menu" th:if="${session.role == 'ADMIN'}">
               <ul>
+                <li><a href="#" th:href="@{/sales}">Sales</a></li>
                 <li><a href="#" th:href="@{/products/admin/{id} (id=${session.id})}">Products</a></li>
                 <li><a href="#" th:href="@{/orders/admin}">Orders</a></li>
                 <li><a href="/members">Members</a></li>
