--- a/src/main/resources/templates/single-question.html
+++ b/src/main/resources/templates/single-question.html
@@ -63,8 +63,8 @@
                    style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly">
         </div><br>
         <div style="width:300px;margin:0 auto;">
-            <label for="contents">내용</label>
-            <input type="text" id="contents" th:field="*{question.contents}"
+            <label>내용</label>
+            <input type="text" th:field="*{question.content}"
                    style="border-radius:3px;border:none;margin-bottom:10px;width:100%;height:35px;" readonly="readonly">
         </div><br><br>
 
@@ -78,15 +78,19 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="answer : ${answers}">
+                <tr th:each="answer : ${question.answerList}">
                     <td th:text="${answer.id}"></td>
-                    <td th:text="${answer.contents}"></td>
-                    <td th:text="${#temporals.format(answer.date, 'yyyy-MM-dd HH:mm:ss')}"></td>
+                    <td th:text="${answer.content}"></td>
+                    <td th:text="${#temporals.format(answer.regDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
                     <td>
-                        <a href="#" th:href="@{/answers/{id}/edit (id=${answer.id})}" class="btn btn-primary" role="button">수정</a>
+                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#updateAnswerModal"
+                                th:data-id="${answer.id}" th:data-content="${answer.content}">수정</button>
                     </td>
                     <td>
-                        <a href="#" class="btn btn-primary" role="button">삭제</a>
+                        <form th:action="@{/answers/{id} (id=${answer.id})}" method="post">
+                            <input type="hidden" name="_method" value="delete">
+                            <button type="submit" class="btn btn-info btn-lg">삭제</button>
+                        </form>
                     </td>
                 </tr>
                 </tbody>
@@ -95,6 +99,36 @@
     </div>
 </div>
 <!-- end single product -->
+
+<!-- 답변 수정 Modal 시작 -->
+<div class="modal fade" id="updateAnswerModal" role="dialog">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">답변 수정하기</h4>
+            </div>
+
+            <!-- 답변 수정 폼 시작 -->
+            <form method="post" id="answerUpdateForm" >
+                <input type="hidden" name="_method" value="put">
+                <div class="modal-body">
+                    <div class="form-group">
+                        <textarea class="form-control" id="new-content" th:name="new-content"></textarea>
+                    </div><br><br>
+                </div>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+                    <button type="submit" class="btn btn-primary">수정</button>
+                </div>
+            </form>
+            <!-- 답변 수정 폼 끝 -->
+        </div>
+    </div>
+</div>
+<!-- 게시글 수정 Modal 끝 -->
 
 <!-- footer -->
 <div th:replace="fragments/footer :: footer"/>
@@ -119,5 +153,13 @@
 <script src="/assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="/assets/js/main.js"></script>
+<script>
+    $(document).ready(function() {
+        $('#updateAnswerModal').on('show.bs.modal', function (e) {
+            $(".modal-content #answerUpdateForm").attr("action", "/answers/" + $(e.relatedTarget).data('id'));
+            $(".modal-body #new-content").val($(e.relatedTarget).data('content'));
+        });
+    });
+</script>
 </body>
 </html>
