--- a/src/main/resources/templates/admin/categories.html
+++ b/src/main/resources/templates/admin/categories.html
@@ -40,7 +40,7 @@
             <div class="col-lg-8 offset-lg-2 text-center">
                 <div class="breadcrumb-text">
                     <p>Catch Shop</p>
-                    <h1>상품</h1>
+                    <h1>카테고리</h1>
                 </div>
             </div>
         </div>
@@ -52,64 +52,39 @@
 <!-- single product -->
 <div class="single-product mt-150 mb-150">
     <div class="container">
-        <!-- 상품 등록 페이지 이동 버튼 -->
+        <!-- 카테고리 등록 페이지 이동 버튼 -->
         <div class="cart-buttons" style="text-align: center; float: right;">
-            <a href="/products/admin" class="boxed-btn btn-lg black">+</a>
+            <a href="/category" class="boxed-btn btn-lg black">+</a>
         </div><br><br><br><br>
 
-        <!-- 전체 상품 조회 시작  -->
+        <!-- 전체 카테고리 조회 시작  -->
         <div>
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>상품명</th>
-                    <th>이미지</th>
-                    <th>가격</th>
-                    <th>수량</th>
-                    <th></th>
+                    <th>카테고리명</th>
+
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="product : ${paging}">
-                    <td th:text="${product.name}"></td>
-                    <td><img th:src="${product.productImgPath}" style="width:100px; height:100px;"></td>
-                    <td th:text="${product.price}"></td>
-                    <td th:text="${product.stock}"></td>
+                <tr th:each="category : ${categories}">
+                    <td th:text="${category.name}"></td>
+                    <!--td th:text="${category.children.name}"></td-->
                     <td>
-                        <a href="#" th:href="@{/products/{id}/admin/edit (id=${product.id})}" class="btn btn-primary" role="button">수정</a>
-                    </td>
-                    <td>
-                        <form th:action="@{/products/{id}/admin (id=${product.id})}" method="post">
+                        <form th:action="@{/categories/{id}(id=${category.id})}" method="post">
                             <input type="hidden" name="_method" value="delete">
                             <button type="submit" class="btn btn-primary">삭제</button>
                         </form>
                     </td>
                 </tr>
+
+
                 </tbody>
             </table><br>
         </div>
         <!-- 전체 상품 조회 끝 -->
 
-        <!-- 페이징 처리 시작 -->
-        <div th:if="${!paging.isEmpty()}">
-            <ul class="pagination justify-content-center">
-                <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
-                    <a class="page-link" th:href="@{|?page=${paging.number-1}|}">
-                        <span>prev</span>
-                    </a>
-                </li>
-                <li th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-                    th:classappend="${page == paging.number} ? 'active'" class="page-item">
-                    <a th:text="${page}" class="page-link" th:href="@{|?page=${page}|}"></a>
-                </li>
-                <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                    <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
-                        <span>next</span>
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <!-- 페이징 처리 끝 -->
+
     </div>
 </div>
 <!-- end single product -->
@@ -137,15 +112,6 @@
 <script src="/assets/js/sticker.js"></script>
 <!-- main js -->
 <script src="/assets/js/main.js"></script>
-<script>
-    // // 삭제 재확인 메시지
-    // $(function(){
-    //     $('#btn-remove').click(function(){
-    //         if (confirm("상품을 삭제하시겠습니까")){
-    //             self.location.href = "@{/products/admin/{id} (id=${product.id})}";
-    //         }
-    //     });
-    // });
-</script>
+
 </body>
 </html>
